Fixed details tab on days when viewed on mobile

--- a/style.css
+++ b/style.css
@@ -481,7 +481,7 @@ body {
     justify-content: space-around;
     flex-direction: column;
     width: inherit;
-    height: 41dvh;
+    height: 40dvh;
     border-radius: 20px;
 }
 
